# fleet-management-system

./: .env-example  README.md  main.py  pyproject.toml
app/: app.py  backend.py  database.py  interface.py  utils.py
app/qml/: main.qml
app/qml/components/: Button.qml  TextEdit.qml  TextField.qml
app/qml/views/: Login.qml  Table.qml
app/qml/views/dialogs/: EditDialog.qml
app/sql/: create_table.sql
