[tool.poetry]
name = "fleet-management-system"
version = "0.1.0"
description = ""
authors = ["dhzdhd"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
oracledb = "^1.2.2"
pyside6 = "^6.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
